--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
   <div id="demoBadge" hidden>DEMO</div>
   <header class="header-container">
     <div class="header-main">
-      <div class="left-section">
-        <div class="logo">
-          <img src="" alt="FX Analysis Logo" style="display:none;" />
-        </div>
-      </div>
+<div class="left-section">
+  <div class="logo">
+    <img src="algo-logo-web-b.png" alt="FX Analysis Logo" width="50" height="33" />
+  </div>
+</div>
       <div class="center-section">
         <h1 class="main-title">FX取引分析ダッシュボード</h1>
         <p class="subtitle">パフォーマンス分析とリスク管理の統合プラットフォーム</p>
