--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
       position:fixed; top:10px; right:10px; padding:6px 10px; border-radius:999px;
       background:#222; color:#fff; font:12px/1 system-ui; border:1px solid #444; z-index:9999; opacity:.9;
     }
+    #demoBadge { display: none !important; }
   </style>
 </head>
 <body>
