--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
   cursor: pointer;
   transition: .2s;
 }
+
+#applyFilters {
+  margin-left: 12px;  /* ← セレクトボックスとの間にスペース */
+}
+    
 .filter-btn:hover { opacity: .9; transform: translateY(-1px); }
 
     /* テキストボタン風（リセット） */
