--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
       .upload-btn { font-size:11px; padding:6px 12px; }
       /* スマホでは中央寄せで下段に回り込みやすく */
       .filter-actions{ justify-content:center; }
+.filter-actions{
+  margin-left: 12px;   /* ← ここでセル間の距離を追加 */
+}
     }
 
     /* DEMOバッジ（非表示のまま） */
