--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --bg-secondary:#181818;
       --bg-tertiary:#232323;
       --border-color:#373737;
-      --positive-color:#00c8ff;
+      --positive-color:#00c8ff; /* 既定のコーポレート色（必要なら残す） */
       --negative-color:#ff3200;
       --text-main:#e0e0e0;
       --text-sub:#aaa;
@@ -37,11 +37,14 @@
     .subtitle{font-size:12px;color:var(--text-sub);font-weight:400;}
     .right-section{display:flex;align-items:center;gap:15px;}
 
-    /* アップロード */
+    /* アップロード（グラデーション適用） */
     .upload-wrapper{position:relative;}
     .upload-btn{
-      background:var(--positive-color);color:#fff;border:none;border-radius:4px;
-      font-size:13px;font-weight:500;padding:8px 16px;cursor:pointer;transition:.2s;white-space:nowrap;
+      display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;
+      min-height:36px;
+      background:linear-gradient(90deg,#00c8ff,#007bff); /* 水色→青 */
+      color:#fff;border:none;border-radius:4px;
+      font-size:13px;font-weight:600;padding:8px 16px;cursor:pointer;transition:.2s;
     }
     .upload-btn:hover{opacity:.9;transform:translateY(-1px);}
     .file-input{display:none;}
@@ -64,14 +67,14 @@
 
     /* フィルター帯 */
     .filters-section{padding:15px 20px;background:rgba(35,35,35,.3);border-top:1px solid var(--border-color);}
-.filters-grid{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  row-gap: 10px;        /* 縦方向はそのまま */
-  column-gap: 16px;     /* 横方向だけ広げる（必要なら 20px などに） */
-  max-width: 1200px;
-  margin: 0 auto 15px;
-}
+    .filters-grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
+      row-gap:10px;          /* 縦間隔 */
+      column-gap:16px;       /* 横間隔（接触防止） */
+      max-width:1360px;      /* 1200px → 1360px に拡大（改行防止） */
+      margin:0 auto 15px;
+    }
     .filter-select{
       background:var(--bg-tertiary);border:1px solid var(--border-color);border-radius:4px;color:var(--text-main);
       font-size:12px;padding:6px 10px;transition:.2s;width:100%;
@@ -80,35 +83,35 @@
     .filter-select:hover{border-color:var(--text-sub);}
     .filter-select option{background:var(--bg-tertiary);color:var(--text-main);}
 
-    /* ボタン行：右端に寄せつつ、左に少し間隔を確保（←今回の肝） */
-.filter-actions{
-  display:flex;
-  gap:10px;
-  justify-content:flex-end;
-  align-items:center;
-  justify-self:end;
-  align-self:end;
-  padding-left:16px;  /* ← ここを追加してセレクトとボタンの間隔を確保 */
-}
+    /* ボタン行：右端寄せ＋セレクトとの間に余白（改行せず並ぶ） */
+    .filter-actions{
+      display:flex;
+      gap:10px;
+      justify-content:flex-end;
+      align-items:center;
+      justify-self:end;  /* グリッド右端へ */
+      align-self:end;
+      padding-left:16px; /* 左のセレクトとの距離 */
+    }
+    /* 余分な列幅を取らない。span指定はしない */
+    @media (min-width:900px){
+      .filter-actions{ /* 右端寄せのみ維持 */ }
+    }
 
-    @media (min-width: 900px){
-  .filter-actions{
-    grid-column: span 2;   /* ← もっと離したければ span 3 に */
-    justify-self: end;     /* 右端に寄せる */
-  }
-}
-
-    /* ボタンの共通スタイル */
+    /* フィルター適用ボタン（グラデーション） */
     .filter-btn{
       display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;
-      min-height:36px;background:var(--positive-color);color:#fff;border:none;border-radius:4px;
+      min-height:36px;
+      background:linear-gradient(90deg,#00c8ff,#007bff); /* 水色→青 */
+      color:#fff;border:none;border-radius:4px;
       font-size:12px;font-weight:600;padding:8px 14px;cursor:pointer;transition:.2s;
     }
     .filter-btn:hover{opacity:.9;transform:translateY(-1px);}
 
-    /* リセット：テキストボタン風 */
+    /* リセット：テキストボタン風（高さ合わせ） */
     .filter-btn.secondary{
-      background:transparent;color:var(--text-sub);border:1px dashed var(--border-color);
+      background:transparent;color:var(--text-sub);
+      border:1px dashed var(--border-color);
       font-weight:500;padding:8px 14px;min-height:36px;white-space:nowrap;
     }
     .filter-btn.secondary:hover{color:var(--text-main);border-style:solid;background:transparent;transform:none;opacity:1;}
@@ -143,7 +146,7 @@
       .tab{padding:8px 12px;font-size:12px;}
       .main-title{font-size:18px;}
       .upload-btn{font-size:11px;padding:6px 12px;}
-      .filter-actions{justify-content:center;margin-left:0;} /* スマホでは中央寄せ＆左余白を無効化 */
+      .filter-actions{justify-content:center;padding-left:0;} /* モバイルは中央寄せ＆余白なし */
     }
 
     /* DEMOバッジ（非表示のまま） */
