--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       --bg-secondary:#181818;
       --bg-tertiary:#232323;
       --border-color:#373737;
-      --positive-color:#00c8ff; /* 既定のコーポレート色（必要なら残す） */
+      --positive-color:#00c8ff; /* 既定色（文言や他所で使う想定なら残す） */
       --negative-color:#ff3200;
       --text-main:#e0e0e0;
       --text-sub:#aaa;
@@ -37,12 +37,12 @@
     .subtitle{font-size:12px;color:var(--text-sub);font-weight:400;}
     .right-section{display:flex;align-items:center;gap:15px;}
 
-    /* アップロード（グラデーション適用） */
+    /* アップロード（グラデーション適用・やや暗め） */
     .upload-wrapper{position:relative;}
     .upload-btn{
       display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;
       min-height:36px;
-      background:linear-gradient(90deg,#00c8ff,#007bff); /* 水色→青 */
+      background:linear-gradient(90deg,#0099dd,#0a6cff); /* ← 明るい方を少し暗く */
       color:#fff;border:none;border-radius:4px;
       font-size:13px;font-weight:600;padding:8px 16px;cursor:pointer;transition:.2s;
     }
@@ -70,9 +70,9 @@
     .filters-grid{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-      row-gap:10px;          /* 縦間隔 */
-      column-gap:16px;       /* 横間隔（接触防止） */
-      max-width:1360px;      /* 1200px → 1360px に拡大（改行防止） */
+      row-gap:10px;
+      column-gap:16px;       /* 横のセル間隔 */
+      max-width:1360px;      /* 少し広げて改行を抑制 */
       margin:0 auto 15px;
     }
     .filter-select{
@@ -83,26 +83,25 @@
     .filter-select:hover{border-color:var(--text-sub);}
     .filter-select option{background:var(--bg-tertiary);color:var(--text-main);}
 
-    /* ボタン行：右端寄せ＋セレクトとの間に余白（改行せず並ぶ） */
+    /* ← ボタンの左に確実にスペースを作る（最後のセレクトの右余白） */
+    #performanceFilter{ margin-right:16px; }
+
+    /* ボタン行：右端寄せ。念のため左にも余白を付ける（環境差で詰まるのを回避） */
     .filter-actions{
       display:flex;
       gap:10px;
       justify-content:flex-end;
       align-items:center;
-      justify-self:end;  /* グリッド右端へ */
+      justify-self:end;
       align-self:end;
-      padding-left:16px; /* 左のセレクトとの距離 */
-    }
-    /* 余分な列幅を取らない。span指定はしない */
-    @media (min-width:900px){
-      .filter-actions{ /* 右端寄せのみ維持 */ }
+      margin-left:16px; /* ← セルが隣接する場合の保険 */
     }
 
-    /* フィルター適用ボタン（グラデーション） */
+    /* フィルター適用ボタン（グラデーション・やや暗め） */
     .filter-btn{
       display:inline-flex;align-items:center;justify-content:center;white-space:nowrap;
       min-height:36px;
-      background:linear-gradient(90deg,#00c8ff,#007bff); /* 水色→青 */
+      background:linear-gradient(90deg,#0099dd,#0a6cff); /* ← 明るい方を少し暗く */
       color:#fff;border:none;border-radius:4px;
       font-size:12px;font-weight:600;padding:8px 14px;cursor:pointer;transition:.2s;
     }
@@ -146,7 +145,8 @@
       .tab{padding:8px 12px;font-size:12px;}
       .main-title{font-size:18px;}
       .upload-btn{font-size:11px;padding:6px 12px;}
-      .filter-actions{justify-content:center;padding-left:0;} /* モバイルは中央寄せ＆余白なし */
+      #performanceFilter{ margin-right:0; }  /* モバイルは縦並びなので余白不要 */
+      .filter-actions{justify-content:center;margin-left:0;} /* モバイル中央寄せ */
     }
 
     /* DEMOバッジ（非表示のまま） */
@@ -256,7 +256,7 @@
           <input type="date" class="date-input" id="endDate" />
         </div>
 
-        <!-- 右端に吸着するボタン群（同じ行に並ぶ／幅が狭いときは次段へ） -->
+        <!-- 右端に吸着するボタン群 -->
         <div class="filter-actions">
           <button class="filter-btn" id="applyFilters">フィルター適用</button>
           <button class="filter-btn secondary" id="resetFilters">リセット</button>
